# FreeFireESP

./: CONFIGURACION_ULTRA_SEGURA.md  FREE_FIRE_ANTICHEAT_ANALYSIS.md  README_ESP_MOD.md
.github/workflows/: build.yml  workflow_build.yml
module/src/main/cpp/: Aimbot.h  Aimbot_v2.h  AntiBan.h  AntiBan_Advanced.h  CMakeLists.txt  ESP_Menu.h  ESP_Menu_backup.h  FreeFire_ESP.h  game.h  main.cpp  offsets.h
module/src/main/cpp/KittyMemory/: KittyMemory.cpp
